--- a/views/account/orders/index.hbs
+++ b/views/account/orders/index.hbs
@@ -21,7 +21,7 @@
       {{#each viewData.orders}}
         <li class="list-group-item row d-flex align-items-center">
           <div class="col-md-2">
-            <a href="/orders/{{getId}}" class="order-number button-link">{{getId}}</a>
+            <a href="/account/orders/{{getId}}" class="order-number button-link">{{getId}}</a>
           </div>
           <div class="col-md-4">
               <div class="dflex">
